# libresult

./: README.md  meson.build
.github/workflows/: build_and_test.yml
src/: result.h
tests/: test_result.c
